# alti-network

altitude-component-library/: .prettierrc  (+6 more)
external_api/: .gitignore  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  run_create_client_sdk.sh  run_integration_tests.py  setup.cfg  setup.py
external_api/.github/: PULL_REQUEST_TEMPLATE.md
external_api/.github/workflows/: create_release_draft.yml  on_external_site_openapi_update.yml  on_flavius_openapi_update.yml  on_pr_label.yml  on_pr_merge.yml  on_pr_merge_deploy_dev.yml  on_pr_merge_publish_dev_package.yml  on_pr_merge_test.yml  on_pr_open.yml  on_push.yml  on_push_validate_service_templates.yml  on_release_merge.yml  on_release_merge_deploy_prod.yml  on_release_merge_deploy_staging.yml  on_release_publish.yml  on_release_publish_milestone.yml
external_api/external_api/: exceptions.py
external_api/external_api/api/: external_site.v1.yml  flavius.v1.yml
external_api/external_api/email_templates/: daily-risk-email.html  risk-summary-email-template.html
external_api/external_api/models/: event.py  file.py  keyword.py  model_base.py  schema_utils.py  sensitive_phrases.py  user.py  visibility.py
external_api/external_api/schema/: user-v1.0.yml
external_api/external_api/user/: user_generator.py
external_api/external_api/utils/: api_scopes_helper.py  apigateway_test_resources.py  blog_post_parser.py  cognito_token_normalizer.py  cognito_token_verifier.py  cognito_user_normalizer.py  constants.py  external_api_handler_template.py  external_email_template.py  policy_generator.py  sql_paginator.py
external_api/services/_deployment/app/: full_app.yml
external_api/services/_deployment/services/: altimeter.yml  apigateway_authorizer.yml  apigateway_integration_test.yml  authorized_app_id.yml  authorized_app_id_events.yml  authorized_app_id_stats.yml  company_domains.yml  cors.yml  delete_permission_id.yml  delete_permissions_by_email.yml  delete_permissions_by_risk_id.yml  delete_permissions_orch.yml  external_site_api.yml  file_id.yml  file_id_events.yml  files.yml  files_parent_folder.yml  flavius_api.yml  folder_id.yml  get_file_id_permissions.yml  get_permissions_status.yml  people.yml  person_id.yml  person_id_events.yml  person_id_stats.yml  risk_stats.yml  risk_summary_emails.yml  risks.yml  risks_tiles.yml  sensitive_phrases.yml  update_email_address.yml  update_risk_status.yml
external_api/services/altimeter/: altimeter_handler.py
external_api/services/apigateway_authorizer/: apigateway_authorizer_handler.py
external_api/services/apigateway_integration_test/: apigateway_integration_test_handler.py
external_api/services/authorized_app_id/: authorized_app_id_handler.py
external_api/services/authorized_app_id/sql/: authorized_app_id_base_query.sql
external_api/services/authorized_app_id_events/: authorized_app_id_events_handler.py
external_api/services/authorized_app_id_stats/: authorized_app_id_stats_handler.py
external_api/services/company_domains/: company_domains_handler.py
external_api/services/cors/: cors_handler.py
external_api/services/delete_permission_id/: delete_permission_id_handler.py
external_api/services/delete_permission_id/sql/: get_file_owner_info_query.sql  update_permissions_query.sql
external_api/services/delete_permissions_by_email/: delete_permissions_by_email_handler.py
external_api/services/delete_permissions_by_risk_id/: delete_permissions_by_risk_id_handler.py
external_api/services/delete_permissions_by_risk_id/sql/: get_platform.sql
external_api/services/delete_permissions_orch/: delete_permissions_orch_handler.py
external_api/services/delete_permissions_orch/sql/: update_risk_status_query.sql
external_api/services/file_id/: file_id_handler.py
external_api/services/file_id_events/: file_id_events_handler.py
external_api/services/files/: files_handler.py
external_api/services/files_parent_folder/: files_parent_folder_handler.py
external_api/services/folder_id/: folder_id_handler.py
external_api/services/get_file_id_permissions/: get_file_id_permissions_handler.py
external_api/services/get_permissions_status/: get_permissions_status_handler.py
external_api/services/people/: people_handler.py
external_api/services/person_id/: person_id_handler.py
external_api/services/person_id_events/: person_id_events_handler.py
external_api/services/person_id_stats/: person_id_stats_handler.py
external_api/services/person_id_stats/sql/: person_id_stats_with_risk.sql  person_id_stats_without_risk.sql
external_api/services/risk_stats/: risk_stats_handler.py
external_api/services/risk_stats/sql/: risk_stats_base_query.sql
external_api/services/risk_summary_emails/: risk_summary_emails_handler.py
external_api/services/risks/: risks_handler.py
external_api/services/risks_tiles/: risks_tiles_handler.py
external_api/services/sensitive_phrases/: sensitive_phrases_handler.py
external_api/services/update_email_address/: update_email_address_handler.py
external_api/services/update_risk_status/: update_risk_status_handler.py
external_api/tests/: TESTING.rst  conftest.py
external_api/tests/dynamo/: fixtures.py
external_api/tests/payloads/: test_event_altimeter.json  test_event_authorized_app_id.json  test_event_authorizer.json  test_event_company_domains.json  test_event_cors.json  test_event_delete_action.json  test_event_delete_permission_id.json  test_event_delete_permission_id_2.json  test_event_delete_permission_orch.json  test_event_file_id.json  test_event_file_id_events.json  test_event_file_id_permissions.json  test_event_files.json  test_event_files_parent_folder.json  test_event_folder_id.json  test_event_get_permissions_status.json  test_event_people.json  test_event_permissions.json  test_event_person_id.json  test_event_person_id_2.json  test_event_person_id_events.json  test_event_person_id_stats.json  test_event_risk_stats.json  test_event_risks.json  test_event_sensitive_phrases.json  test_event_update_email_address.json  test_event_update_risk_status.json
external_api/tests/sql/: fixtures.py
(+1476 files in other folders)
