[metadata]
name = external_api
version = file: external_api/version.txt
description = A collection of our frontend facing lambda functions
author = Altitude Networks Engineering Team
author_email = engineering@altitudenetworks.com
url = https://github.com/altitudenetworks/external_api
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = Proprietary License
classifiers =
    Intended Audience :: Developers
    Environment :: Console
    License :: Other/Proprietary License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    google_api_python_client
    jinja2>=2.11.3 # CVE-2020-28493
    openapi-spec-validator
    python-dateutil
    python_jose
    requests
    jsonschema
    strict-rfc3339
    tools==15.33.0
    flavius-client-sdk==1.6.0

[options.entry_points]
console_scripts =

[options.package_data]
external_api =
    version.txt
    api/*.yml
    user/sql/*/*.sql
    email_templates/*
    schema/*.yml
services =
    _deployment/**/*.yml
    **/Dockerfile

[options.extras_require]

[options.packages.find]
where = .
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
    __pycache__
include =
    external_api
    external_api.*
    services
    services.*

[mypy]
python_version = 3.7
warn_return_any = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,vulture_whitelist.py,test_*.py
ignore = E203,W503
max-complexity = 12

[tool:pytest]
addopts =
    --mysql-database=eia_thoughtlabs_test
    --mysql-drop-db
markers =
    integration: marks integration tests (run them with 'pre_commit -c pytest-integration')
    slow: marks unit tests that take a lot of time to run
filterwarnings =
    ignore:.*the imp module is deprecated.*:DeprecationWarning
    ignore:.*TerminalReporter.writer.*:DeprecationWarning:
    ignore:.*The usage of `cmp` is deprecated.*:DeprecationWarning:
    ignore:.*do_exit is deprecated.*:DeprecationWarning:
